--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,18 +1,17 @@
-# Redirect all requests to index.html for SPA routing
+# Ensure mod_rewrite is enabled and force SPA fallback
 <IfModule mod_rewrite.c>
   RewriteEngine On
   RewriteBase /
 
-  # If a file or directory exists, serve it directly
-  RewriteCond %{REQUEST_FILENAME} -f [OR]
-  RewriteCond %{REQUEST_FILENAME} -d
-  RewriteRule ^ - [L]
+  # Don't rewrite requests for existing files or directories
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
 
-  # Otherwise, route everything to index.html
-  RewriteRule ^ index.html [L]
+  # Send all other requests to index.html
+  RewriteRule ^ index.html [QSA,L]
 </IfModule>
 
-# Optional: cache static assets for performance
+# Optional: enable caching for static assets
 <IfModule mod_expires.c>
   ExpiresActive On
   ExpiresByType image/jpg "access plus 1 year"
